<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/menu_add_dice"
          android:showAsAction="ifRoom"
          android:icon="@drawable/d20gadd"
          android:title="@string/dice_add_dialog_string" />
    <item android:id="@+id/menu_clear_screen"
                                                   android:title="@string/clear_screen"
                                                   android:showAsAction="ifRoom"
                                                   android:icon="@drawable/d20gclrs"/>
    <item android:id="@+id/menu_add_ttr"
          android:title="@string/add_ttr"
          android:showAsAction="ifRoom"
          android:icon="@drawable/dttrs"/>
    <item android:id="@+id/menu_roll_dice"
          android:title="@string/btnRand" />
     <item android:id="@+id/menu_activity_add_dice"
          android:title="@string/dice_add_complex_dialog_string" />
    <item android:id="@+id/preferences"
          android:title="@string/preferencesItem"/>
    <item android:id="@+id/about_id"
          android:title="@string/about" />
</menu>
