<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:padding="15dp">
    <TextView 
        android:id="@+id/aboutauthor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/authorname"/>
    <TextView
        android:id="@+id/artcredits"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/artcredit"/>
    <TextView 
        android:id="@+id/attribution1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/attribution"/>
    <TextView 
        android:id="@+id/attribution2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/attribution2"/>
    <Button
        android:id="@+id/atributelink"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/soundurl"/>
    

</LinearLayout>
