<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/layout_root"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">
    <EditText
            android:id="@+id/nameDiceText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:hint="@string/namehint"
            android:text="@string/empty"/>
        <View
                android:id="@+id/centreLine"
                android:layout_width="20dp"
                android:layout_height="fill_parent"
                android:layout_centerInParent="true"/>
    <TextView
            android:id="@+id/total_colour_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/nameDiceText"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@id/centreLine"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/available_colours"/>
    <TextView
            android:id="@+id/chosen_colour_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/nameDiceText"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@id/centreLine"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/chosen_colours"/>

    <ListView
            android:id="@+id/available_colour_picker"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:padding="2dp"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@id/centreLine"
            android:layout_below="@id/total_colour_label"
            android:background="@drawable/rectangle_border"/>
    <ListView
            android:id="@+id/chosen_colour_picker"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:padding="2dp"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@id/centreLine"
            android:layout_below="@id/chosen_colour_label"
            android:background="@drawable/rectangle_border"/>

</RelativeLayout>